# claude-stwinbox-diagnostics

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  consistency-governance.md  demo-assets.md  getting-started.md  index.html  roadmap.md  robots.txt  sitemap.xml
examples/: README.md  generate_sample_data.py
examples/sample_data/: .gitkeep
mcp-servers/stwinbox-sensor-mcp/: README.md  pyproject.toml
mcp-servers/stwinbox-sensor-mcp/src/stwinbox_sensor_mcp/: __init__.py  __main__.py  datalog2_comm.py  sensor_config.py  serial_comm.py  server.py
mcp-servers/vibration-analysis-mcp/: README.md  pyproject.toml
mcp-servers/vibration-analysis-mcp/src/vibration_analysis_mcp/: __init__.py  __main__.py  bearing_freqs.py  data_store.py  envelope.py  fault_detection.py  fft_analysis.py  server.py
scripts/: build_skill_zips.py
skills/machine-vibration-monitoring/: SKILL.md
skills/machine-vibration-monitoring/references/: sensor-specs.md
skills/machine-vibration-monitoring/scripts/: check_thresholds.py
skills/operator-diagnostic-report/: SKILL.md
skills/operator-diagnostic-report/assets/: report-template.md
skills/operator-diagnostic-report/references/: report-guidelines.md
skills/vibration-fault-diagnosis/: SKILL.md
skills/vibration-fault-diagnosis/references/: fault-signatures.md  iso-10816-guide.md
skills/vibration-fault-diagnosis/scripts/: classify_fault.py
